--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="todo">TODO</string>
+    <string name="latest_activity_title">最新活动</string>
+    <string name="latest_activity_title">最新活动</string>
 </resources>
